# yolov8-trt

./: CMakeLists.txt  README.md
include/: onnx2trt.h  utils.h  yolov8.h
src/: main.cpp  onnx2trt.cpp  utils.cpp  yolov8.cpp
